# python-project-template

./: .editorconfig  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yaml
.github/workflows/: build-and-push-image.yaml  codeql-analysis.yaml  deploy-to-cloud-run.yaml  integration-test.yaml  lint-and-type-check.yaml  promote-image.yaml  skip-integration-test.yaml  unit-tests.yaml
requirements/: requirements-lint.txt  requirements-test.py3.12-test.txt  requirements-test.py3.13-test.txt  requirements-test.py3.14-test.txt
src/hatch_python_project_template/: main.py
src/python_project/: logging.conf  main.py
src/python_project/utils/: utils.py
src/python_project_template/: main.py
src/python_project_template/utils/: utils.py
tests/: test_main.py  test_utils.py
