####################
# Project Metadata #
####################

[project]
authors = [{ name = "Henrik Holm", email = "no-reply@email.com" }]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
description = "Python template project using the Hatch project manager."
dynamic = ["version"]
license = { file = "LICENSE" }
name = "python-project"
readme = "README.md"
requires-python = ">=3.13"

[project.urls]
Documentation = "https://github.com/h-holm/python-project"
Source = "https://github.com/h-holm/python-project"

#########
# Hatch #
#########

[tool.hatch]
metadata.allow-direct-references = true

[tool.hatch.env]
requires = ["hatch-pip-compile~=1.11.3"]

[tool.hatch.version]
path = "src/python_project/__version__.py"
raw-options = { version_scheme = "no-guess-dev" }

######################
# Hatch Environments #
######################

# "Base" env to ensure the same Python version is used across all Hatch envs. Note that this env is not supposed to be
# used directly, but rather as a template for other envs.
[tool.hatch.envs.base]
python = "3.13"
# Skip (local) installation of the project itself. This assumes the project is not supposed to be packaged.
skip-install = true
template = "base"

[tool.hatch.envs.base.scripts]
upgrade-all = "PIP_COMPILE_UPGRADE=1 hatch env run --env {env_name} -- python --version"
upgrade-pkg = "PIP_COMPILE_UPGRADE_PACKAGE='{args}' hatch env run --env {env_name} -- python --version"

#######################
# Default Environment #
#######################

# Default environment used by Hatch if no other env is explicitly specified.
[tool.hatch.envs.default]
dependencies = ["typer~=0.15.2"]
installer = "uv"
pip-compile-constraint = "default" # Keep locks between default and other environments consistent.
pip-compile-hashes = true
pip-compile-resolver = "uv"
pip-compile-installer = "uv"
template = "base"
type = "pip-compile"

####################
# Test Environment #
####################

[tool.hatch.envs.test]
# Use `extra-dependencies` to inherit and extend upon the dependencies of the default env.
extra-dependencies = [
  "pytest~=8.3.5",
  "pytest-asyncio~=0.25.3",
  "pytest-cov~=6.0.0",
  "pytest-mock~=3.14.0",
]

[tool.hatch.envs.test.scripts]
debug = "python -m pytest --pdb"
test = "python -m pytest --verbose --cov-report=term-missing --cov=src/python_project {args}"
no-cov = "test --no-cov {args}"
cov-xml = "test --cov-report=xml"

# By leveraging the Hatch matrix feature we can test against multiple Python versions.
[[tool.hatch.envs.test.matrix]]
template = ["test"]
python = ["3.13"]

####################
# Lint Environment #
####################

[tool.hatch.envs.lint]
extra-dependencies = [
  "mypy~=1.15.0",
  "pip~=25.0.1",  # To enable `mypy` to `pip install` stubs.
  "pre-commit~=4.2.0",
  "pydantic~=2.10.6",
  "pytest~=8.3.5",
  "ruff~=0.11.0",
]

[tool.hatch.envs.lint.scripts]
# Set up and run `pre-commit` hooks.
hooks = [
  "python -m pre_commit install",
  "python -m pre_commit",
]
# Check the code style and formatting.
style = [
  "echo \"VERSION: `python -m ruff --version`\"",
  "python -m ruff check {args:.}",
  "python -m ruff format --check {args:.}",
]
# Fix code style and formatting issues where possible.
# Run `style` at the end to generate feedback on non-fixable issues.
fix = [
  "python -m ruff format {args:.}",
  "python -m ruff check --fix {args:.}",
  "style",
]
# Perform static type checking.
typing = [
  "echo \"VERSION: `python -m mypy --version`\"",
  "python -m mypy --install-types --non-interactive {args}",
]
# For use as a `pre-commit` hook, define a simpler `typing` script that (1) ignores missing imports
# and (2) does not `--install-types`.
simple-typing = [
  "echo \"VERSION: `python -m mypy --version`\"",
  "python -m mypy --ignore-missing-imports {args}",
]
# Define a `lint` script that runs full-scale style, formatting and type checks ...
lint = [
  "style",
  "typing",
]
# ... and a simpler `simple-lint` script for use as a pre-commit hook.
simple-lint = [
  "style",
  "simple-typing",
]

##################
# External Tools #
##################

[tool.coverage.paths]
source = ["src/python_project"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:"]
skip_empty = true

[tool.coverage.run]
branch = true
omit = ["src/python_project/__version__.py", "tests/*"]
relative_files = true
source = ["src/python_project"]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_any_unimported = true
files = ["src/python_project", "tests"]
# Set to "silent" to not follow.
follow_imports = "normal"
no_implicit_optional = true
plugins = ["pydantic.mypy"]
pretty = true
show_column_numbers = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "--cov=src/python_project --cov-report=term-missing --doctest-glob='*.md'"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "strict"
minversion = "8.3.5"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
exclude = ["src/python_project/__version__.py"]
indent-width = 4
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",  # "May cause conflicts when used with the formatter".
  "CPY001",  # Requires copyright notices at the top of files.
  "D203",    # If enabled, this requires one blank line before Class docstrings. Conflicts with D211.
  "D213",    # Conflicts with D212.
  "ISC001",  # Causes unexpected behaviour with formatter.
  "G004",    # Disallows f-strings in logging statements.
  "PLC1901", # Disallows comparing to the empty string ("").
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
known-first-party = ["python_project"]
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]
"tests/**/*" = [
  # Tests can use magic values, assertions, and relative imports.
  "PLR2004",
  "S101",
  "TID252",
  # Tests can skip docstrings.
  "D100",
  "D103",
  # Allow boolean-typed positional arguments in test function definitions.
  "FBT001",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
